# propselectai

./: .env.template  README.md  docker-compose.yml  examples.md
backend/: Dockerfile  README.md  main.py  pyproject.toml  test_pdf.py  test_rag.py  test_rag_mock.py
backend/api/: router.py
backend/models/: schemas.py
backend/scripts/: analyze_sheets.py  ingestion.py  migrate_db.py
backend/services/: database.py  filters.py  rag.py  report.py
data/planilhas/: ESTRUTURA BANCO DE DADOS 2.xlsx  ESTRUTURA BANCO DE DADOS 3.xlsx
docs/: ARCHITECTURE.md  SETUP.md
frontend/: Dockerfile  main.py
