[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "fpdf>=1.7.2",
    "langchain>=1.3.8",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pypdf>=6.13.2",
    "reportlab>=4.5.1",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
